--- a/charts/kubevirt-infra-csi-driver/templates/configmap.yaml
+++ b/charts/kubevirt-infra-csi-driver/templates/configmap.yaml
@@ -8,7 +8,7 @@ metadata:
 data:
   infraClusterNamespace: {{ .Values.tenant.namespace }}
   infraClusterLabels: {{ .Values.tenant.labels }}
-  {{- with .Values.infraStorageClassEnforcement }}
+  {{- with .Values.tenant.storageClassEnforcement }}
   infraStorageClassEnforcement: |
-  {{- toYaml . | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
