--- a/charts/kubevirt-infra-csi-driver/values.yaml
+++ b/charts/kubevirt-infra-csi-driver/values.yaml
@@ -129,5 +129,4 @@ tenant:
   namespace: ""
   labels: csi-driver/cluster=tenant
   kubeconfig: ""
-
-infraStorageClassEnforcement: {}
+  storageClassEnforcement: {}
