--- a/charts/kubevirt-infra-csi-driver/templates/configmap.yaml
+++ b/charts/kubevirt-infra-csi-driver/templates/configmap.yaml
@@ -8,3 +8,7 @@ metadata:
 data:
   infraClusterNamespace: {{ .Values.tenant.namespace }}
   infraClusterLabels: {{ .Values.tenant.labels }}
+  {{- with .Values.tenant.storageClassEnforcement }}
+  infraStorageClassEnforcement: |
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
