--- a/charts/kubevirt-tenant-csi-driver/values.yaml
+++ b/charts/kubevirt-tenant-csi-driver/values.yaml
@@ -83,3 +83,7 @@ priorityClassName: system-node-critical
 tenant:
   namespace: ""
   labels: csi-driver/cluster=tenant
+
+infra:
+  storageClassName: standard
+  snapshotClassName: ""
