--- a/charts/kubevirt-tenant-csi-driver/templates/snapshot-controller.yaml
+++ b/charts/kubevirt-tenant-csi-driver/templates/snapshot-controller.yaml
@@ -7,7 +7,7 @@ spec:
   replicas: {{ .Values.snapshotController.replicaCount }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: snapshot-controller
+      app.kubernetes.io/component: snapshot-controller
       {{- include "kubevirt-tenant-csi-driver.labels" . | nindent 6 }}
   minReadySeconds: 35
   strategy:
@@ -18,9 +18,13 @@ spec:
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: snapshot-controller
+        app.kubernetes.io/component: snapshot-controller
         {{- include "kubevirt-tenant-csi-driver.labels" . | nindent 8 }}
     spec:
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       serviceAccountName: {{ include "kubevirt-tenant-csi-driver.serviceAccountName" . }}-snapshot-controller
       containers:
         - name: snapshot-controller
@@ -29,3 +33,24 @@ spec:
             - "--v=5"
             - "--leader-election=true"
           imagePullPolicy: {{ .Values.snapshotController.pullPolicy }}
+          {{- with .Values.snapshotController.securityContext }}
+          securityContext:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- with .Values.snapshotController.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      priorityClassName: {{ .Values.priorityClassName }}
