--- a/catalog/imagelist.yaml
+++ b/catalog/imagelist.yaml
@@ -1,11 +1,8 @@
-- ghcr.io/appscode/kubectl-nonroot:1.31
-- ghcr.io/kluster-manager/cluster-auth:v0.4.1
-- ghcr.io/kluster-manager/cluster-gateway-manager:v1.11.0
-- ghcr.io/kluster-manager/cluster-gateway:v1.11.0
-- ghcr.io/kluster-manager/cluster-profile:v0.10.0
-- ghcr.io/kluster-manager/cluster-proxy:v0.7.0
-- ghcr.io/kluster-manager/clusteradm:v1.0.0
-- ghcr.io/kluster-manager/fluxcd-addon:v0.0.9
-- ghcr.io/kluster-manager/managed-serviceaccount:v0.8.1
-- quay.io/open-cluster-management/multicluster-controlplane:latest
-- quay.io/open-cluster-management/registration-operator:v1.0.0
+- k8s.gcr.io/sig-storage/csi-snapshotter:v4.2.1
+- quay.io/kubevirt/kubevirt-csi-driver:latest
+- quay.io/openshift/origin-csi-external-attacher:latest
+- quay.io/openshift/origin-csi-external-provisioner:latest
+- quay.io/openshift/origin-csi-livenessprobe:latest
+- quay.io/openshift/origin-csi-node-driver-registrar:latest
+- registry.k8s.io/sig-storage/csi-resizer:v1.13.1
+- registry.k8s.io/sig-storage/snapshot-controller:v6.3.1
