--- a/charts/kubevirt-tenant-csi-driver/templates/snapshotter.yaml
+++ b/charts/kubevirt-tenant-csi-driver/templates/snapshotter.yaml
@@ -1,9 +1,8 @@
----
 {{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "kubevirt-tenant-csi-driver.serviceAccountName" . }}-snapshot-controller
+  name: {{ include "kubevirt-tenant-csi-driver.serviceAccountName" . }}-snapshotter
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "kubevirt-tenant-csi-driver.labels" . | nindent 4 }}
@@ -17,7 +16,7 @@ automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}:snapshot-controller-runner
+  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}:snapshotter
   labels:
     {{- include "kubevirt-tenant-csi-driver.labels" . | nindent 4 }}
 rules:
@@ -70,22 +69,22 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}:snapshot-controller-role
+  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}:snapshotter
   labels:
     {{- include "kubevirt-tenant-csi-driver.labels" . | nindent 4 }}
 subjects:
   - kind: ServiceAccount
-    name: {{ include "kubevirt-tenant-csi-driver.serviceAccountName" . }}-snapshot-controller
+    name: {{ include "kubevirt-tenant-csi-driver.serviceAccountName" . }}-snapshotter
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
-  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}:snapshot-controller-runner
+  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}:snapshotter
   apiGroup: rbac.authorization.k8s.io
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}-snapshot-controller-leaderelection
+  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}-snapshotter-leaderelection
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "kubevirt-tenant-csi-driver.labels" . | nindent 4 }}
@@ -93,19 +92,75 @@ rules:
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
     verbs: ["get", "watch", "list", "delete", "update", "create"]
-
 ---
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}-snapshot-controller-leaderelection
+  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}-snapshotter-leaderelection
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "kubevirt-tenant-csi-driver.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}-snapshot-controller-leaderelection
+  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}-snapshotter-leaderelection
 subjects:
   - kind: ServiceAccount
-    name: {{ include "kubevirt-tenant-csi-driver.serviceAccountName" . }}-snapshot-controller
+    name: {{ include "kubevirt-tenant-csi-driver.serviceAccountName" . }}-snapshotter
+---
+kind: Deployment
+apiVersion: apps/v1
+metadata:
+  name: {{ include "kubevirt-tenant-csi-driver.fullname" . }}-snapshotter
+  namespace: {{ .Release.Namespace }}
+spec:
+  replicas: {{ .Values.snapshotter.replicaCount }}
+  selector:
+    matchLabels:
+      app.kubernetes.io/component: snapshotter
+      {{- include "kubevirt-tenant-csi-driver.labels" . | nindent 6 }}
+  minReadySeconds: 35
+  strategy:
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
+    type: RollingUpdate
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/component: snapshotter
+        {{- include "kubevirt-tenant-csi-driver.labels" . | nindent 8 }}
+    spec:
+      {{- with .Values.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      serviceAccountName: {{ include "kubevirt-tenant-csi-driver.serviceAccountName" . }}-snapshotter
+      containers:
+        - name: snapshotter
+          image: {{ .Values.snapshotter.repository }}:{{ .Values.snapshotter.tag | default .Chart.AppVersion }}
+          args:
+            - "--v=5"
+            - "--leader-election=true"
+          imagePullPolicy: {{ .Values.snapshotter.pullPolicy }}
+          {{- with .Values.snapshotter.securityContext }}
+          securityContext:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          {{- with .Values.snapshotter.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+      {{- with .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      priorityClassName: {{ .Values.priorityClassName }}
