--- a/charts/kubevirt-tenant-csi-driver/values.yaml
+++ b/charts/kubevirt-tenant-csi-driver/values.yaml
@@ -43,6 +43,21 @@ livenessprobe:
       memory: 20Mi
       cpu: 5m
 
+snapshotter:
+  # This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
+  replicaCount: 2
+  # -- Image repository for the default container.
+  repository: registry.k8s.io/sig-storage/snapshot-controller
+  # -- (string) Image tag for the default container; this will default to `.Chart.AppVersion` if not set.
+  tag: v6.3.1
+  # -- Image pull policy for the default container.
+  pullPolicy: IfNotPresent
+  securityContext: {}
+  resources: # +doc-gen:break
+    requests:
+      memory: 50Mi
+      cpu: 10m
+
 # This is for the secrets for pulling an image from a private repository more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
 imagePullSecrets: []
 # This is to override the chart name.
