--- a/charts/kubevirt-infra-csi-driver/templates/rbac.yaml
+++ b/charts/kubevirt-infra-csi-driver/templates/rbac.yaml
@@ -52,6 +52,7 @@ subjects:
 - kind: ServiceAccount
   name: {{ include "kubevirt-infra-csi-driver.serviceAccountName" . }}
 ---
+{{- if not (lookup "rbac.authorization.k8s.io/v1" "ClusterRole" "" (include "kubevirt-infra-csi-driver.fullname" .)) }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -62,11 +63,12 @@ rules:
 - apiGroups: [""]
   resources: ["persistentvolumes"]
   verbs: ["get"]
+{{- end }}
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ include "kubevirt-infra-csi-driver.fullname" . }}
+  name: {{ include "kubevirt-infra-csi-driver.fullname" . }}-{{ .Release.Namespace }}
   labels:
     {{- include "kubevirt-infra-csi-driver.labels" . | nindent 4 }}
 roleRef:
