--- a/charts/kubevirt-infra-csi-driver/templates/rbac.yaml
+++ b/charts/kubevirt-infra-csi-driver/templates/rbac.yaml
@@ -52,18 +52,19 @@ subjects:
 - kind: ServiceAccount
   name: {{ include "kubevirt-infra-csi-driver.serviceAccountName" . }}
 ---
-{{- if not (lookup "rbac.authorization.k8s.io/v1" "ClusterRole" "" (include "kubevirt-infra-csi-driver.fullname" .)) }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: {{ include "kubevirt-infra-csi-driver.fullname" . }}
   labels:
     {{- include "kubevirt-infra-csi-driver.labels" . | nindent 4 }}
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook-delete-policy": before-hook-creation
 rules:
 - apiGroups: [""]
   resources: ["persistentvolumes"]
   verbs: ["get"]
-{{- end }}
 ---
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
